web/themes/custom/kull/css/main.css
/* ... */
.tv-show-local-tasks ul li {
  margin-right: 15px;
}

/** Search **/
.search-block-form .form-item {
  float: left;
}

.search-block-form .form-item, .search-block-form .form-actions {
  display: inline-block;
}

.search-block-form input[type="search"] {
  border: 1px solid #cccccc;
  border-right: none;
  border-radius: 5px 0 0 5px;
  padding: 10px;
  height: 42px;
}

.search-block-form .button {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  padding: 8px;
}

/** News **/

.news-publish-infos-container {
  position: relative;
  margin: 20px 0;
  height: 40px;
  font-size: 0.8em;
}

.news-publish-infos-container:after {
  content: "";
  width: calc(100% - 20px);
  position: absolute;
  height: 36px;
  border-top: solid 1px #cccccc;
  border-bottom: solid 1px #cccccc;
  top: 1px;
  left: 0;
  z-index: 0;
}

.news-publish-infos {
  z-index: 1;
  position: absolute;
  height: 40px;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.news-additional-infos {
  display: flex;
  align-items: center;
  color: #cccccc;
}

.news-category {
  display: inline;
  margin-right: 5px;
  font-weight: bold;
}

.news-date {
  display: inline;
  margin-left: 5px;
  color: #666;
}

.news-author-infos {
  display: flex;
  align-items: center;
}

.news-author-name {
  font-weight: bold;
}

.news-author-picture {
  border-radius: 50%;
  border: solid 1px #cccccc;
  height: 38px;
  width: 38px;
  overflow: hidden;
  margin-left: 10px;
}

.news-author-picture img {
  width: 100%;
  height: auto;
}

.news-tags-label {
  font-weight: bold;
  margin-bottom: 10px;
  font-size: 0.9em;
}

.news-tags {
  padding: 20px 0;
}

.news-tag {
  display: inline-block;
}

.news-tag a {
  display: block;
  padding: 10px 20px;
  background-color: #cccccc;
  transition: 0.3s;
  font-size: 90%;
}

.news-tag a:hover {
  text-decoration: none;
  background-color: #00aaff;
  color: #FFF;
}

@media only screen and (max-width: 699px) {
  .news-publish-infos-container {
    font-size: 0.7em;
  }
}

/** Header **/

.header {
  background-position: center;
  height: 142px;
  width: 100%;
  position: relative;
  overflow: hidden;
}

.header--animated-background {
  position: absolute;
  animation: parallax_bg2 linear infinite;
  animation-duration: 0s;
  right: 0;
  width: auto;
  background-repeat: repeat-x;
  height: 142px;
  top: 0;
  background-size: auto auto;
  background-position: 0 0;
  background-size: auto 100%;
  animation-duration: 70s;
}

.header--background {
  position: absolute;
  width: 100%;
  height: 142px;
  background: url(../Images/Design/header-background.png);
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position: center center;
  top: 0;
  right: 0;
}

@keyframes parallax_bg2 {
  0% {
    left: 0;
  }
  100% {
    left: -1000px;
  }
}

/** Menu **/

.home-block a {
  width: 132px;
  height: 63px;
  display: block;
  margin-right: 10px;
}

.menu-section {
  background-color: #FFF;
  border-bottom: solid 1px #d9d9d9;
  box-shadow: 0 4px 2px -2px #d9d9d9;
  position: relative;
}

.menu-section-container {
  display: flex;
  position: relative;
}

.main-menu--links {
  list-style-type: none;
  display: flex;
  margin: 0;
  padding: 0;
  height: 63px;
  align-items: center;
}

.main-menu--links a {
  text-decoration: none;
  padding: 0 15px 0 15px;
  height: 63px;
  display: block;
  line-height: 63px;
  position: relative;
}

.main-menu--links a, .no-touch .main-menu--links a:hover, .main-menu--links a:visited {
  color: #151515;
  font-size: 15px;
  font-weight: bold;
}

.no-touch .main-menu--level-1.main-menu--links .multiple-links:hover>a:after, .main-menu--level-1.main-menu--links .multiple-links.open>a:after {
    width: 0;
    height: 0;
    position: absolute;
    z-index: 2;
    content:"";
    display:block;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-top: 8px solid #fff;
    left: 50%;
    margin-left: -8px;
}

.has-touch .main-menu--level-1.main-menu--links .multiple-links>a:before {
  content: "⌄";
  display: inline-block;
  position: absolute;
  right: 10px;
  font-size: 40px;
  width: 30px;
  text-align: center;
  z-index: 20;
  line-height: 32px;
  height: 100%;
  transition: 0.5s;
}

.has-touch .main-menu--level-1.main-menu--links .multiple-links.open>a:before {
  transform: rotate(180deg);
}

.main-menu--level-1 {
  text-transform: uppercase;
}

.main-menu--level-2 {
  height: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
  transition: height 0.5s ease;
  width: 100%;
  left: 0;
  background-color: #111820;
  text-transform: initial;
}

.no-touch .main-menu--links.main-menu--level-1 a:hover + .main-menu--level-2, .main-menu--links.main-menu--level-1 .multiple-links.open a + .main-menu--level-2, .no-touch .main-menu--level-2:hover {
  height: 63px;
  width: 100%;
}

.main-menu--links.main-menu--level-2 a, .no-touch .main-menu--links.main-menu--level-2 a:hover, .main-menu--links.main-menu--level-2 a:visited {
  color: #FFF;
}

/** Content **/
.main-content-zone {
  background-color: #FFF;
  padding-top: 10px;
}

.main-container {
  display: flex;
}

.main-content {
  width: 100%;
  max-width: 700px;
  padding: 0 20px 20px 20px;
}

.right-column {
  width: 300px;
}

.news-list {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr 1fr;
}

.news-teaser {
  width: 320px;
  position: relative;
 margin: auto;
}

.news-teaser--content-text {
  overflow: hidden;
  width: 240px;
  transition: height 0.5s ease;
  height: 110px;
  position: absolute;
  bottom: 0;
  background-color: #FFF;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  padding: 10px 10px 0 10px;
}

.news-teaser--content-text h2 {
  margin: 0 0 15px 0;
  font-size: 17px;
}

.news-teaser--content-text .news-teaser--description {
  font-size: 13px;
  color: #7d7d7d;
}
/* ... */

